k8s/crud-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-app-service
spec:
  selector:
    app: crud-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
